Supporting multiple games.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,7 @@
       "type": "debugpy",
       "request": "launch",
       "program": "main_cli.py",
+      "args": ["counterstrike"],
       "console": "integratedTerminal"
     }
   ]
